# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,16 @@
 import { Router, type IRouter } from "express";
+import bookingsRouter from "./bookings";
 import healthRouter from "./health";
+import profileRouter from "./profile";
+import providersRouter from "./providers";
+import servicesRouter from "./services";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(servicesRouter);
+router.use(providersRouter);
+router.use(bookingsRouter);
+router.use(profileRouter);
 
 export default router;
